Fix image on mobile
make image larger on mobile view

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,7 +51,7 @@ pre {
 /* Images ----------------------------------------- */
 
 img {
-	width: 70%;
+	width: 100%;
 	margin: 0 auto;
 	display: block;
 }
@@ -68,7 +68,11 @@ img {
 
 /* Larger than desktop */
 
-@media (min-width: 1000px) {}
+@media (min-width: 1000px) {
+	img{
+		width: 80%;
+	}
+}
 
 /* Larger than Desktop HD */
 
